--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/go
 
 trigger:
-- master
+  branches:
+    include:
+      - master
+      - milestone/*
+  tags:
+    include: ['*']
 
 pool:
   vmImage: 'ubuntu-latest'
