--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,14 @@
 name: Continuous Integration
-on: [push]
+
+# Trigger the workflow on push or pull request
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - '*'
+
 jobs:
   test:
     name: Test
